Cordova browser config

--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -4,10 +4,10 @@ page-signup {
     height: 90%;
     width: 80%;
     margin: auto;
-    margin-top: 2em;
+    margin-top: 1em;
     margin-bottom: 0%;
-    max-width: 70%;
-    max-height: 42%;
+    max-width: 25em;
+    max-height: 47%;
   }
   #grid {
     margin: 0px 0px;
