--- a/src/pages/signin/signin.scss
+++ b/src/pages/signin/signin.scss
@@ -10,8 +10,8 @@ page-signin {
     margin: auto;
     margin-top: 1em;
     margin-bottom: 0%;
-    max-width: 80%;
-    max-height: 50%;
+    max-width: 25em;
+    max-height: 47%;
   }
   #grid {
     margin: 0px 0px;
