--- a/src/pages/app-team/app-team.scss
+++ b/src/pages/app-team/app-team.scss
@@ -1,30 +1,43 @@
 page-app-team {
     .info-style {
-        position: absolute;
-        bottom: 120px;
-        left: 30px;
+      position: absolute;
+      bottom: 120px;
+      left: 30px;
     }
 
     ion-card {
-    position: relative;
-    text-align: center;
+      position: relative;
+      text-align: center;
+      padding: 0%;
     }
 
     .card-title {
-    position: absolute;
-    top: 82%;
-    font-size: 2.0em;
-    width: 100%;
-    font-weight: bold;
-    color: #fff;
+      position: absolute;
+      top: 80%;
+      font-size: 2.0em;
+      width: 100%;
+      font-weight: bold;
+      color: #fff;
+      text-shadow: 9px 9px 9px rgb(73, 73, 73);
+      margin: 0%;
+      font-family: 'Jura', sans-serif;
     }
 
     .card-subtitle {
-    font-size: 1.0em;
-    position: absolute;
-    top: 93%;
-    width: 100%;
-    color: #fff;
+      margin: 0%;
+      font-size: 1.2em;
+      position: absolute;
+      top: 87%;
+      width: 100%;
+      color: #fff;
+      font-weight: bolder;
+      text-shadow: 9px 9px 9px rgb(73, 73, 73);   
+      font-family: 'Jura', sans-serif;  
     }
 
+    .profImg {
+      display: inline-block;
+      max-width: 40%;
+      align-self: center;
+    }
 }
