--- a/src/pages/sponsor/sponsor.scss
+++ b/src/pages/sponsor/sponsor.scss
@@ -1,3 +1,16 @@
 page-sponsor {
+  .divStyle{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    float: left;
+  }
+
+  .imgStyle{
+    max-width:200px;
+    max-height:200px;
+    padding: 0.2cm 0.2cm 0.2cm 0.2cm;
+    float: left;
+  }
 
 }
